scrollbar fix try

--- a/public/profile/assets/css/material-dashboard.css
+++ b/public/profile/assets/css/material-dashboard.css
@@ -19256,15 +19256,9 @@ Copyright (c) 2015 Daniel Eden
     -webkit-overflow-scrolling: touch;
   }
   /* Hide scrollbar for Chrome, Safari and Opera */
-  .example::-webkit-scrollbar {
-    display: none;
+  body::-webkit-scrollbar {
+    display: none !important; 
   }
-
-  /* Hide scrollbar for IE, Edge and Firefox */
-  .example {
-    -ms-overflow-style: none;  /* IE and Edge */
-    scrollbar-width: none;  /* Firefox */
-  } 
   .form-group.form-search .form-control {
     font-size: 1.7em;
     height: 37px;
